--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 .ipynb_checkpoints/STREAMLINE-GoogleColabNotebook-checkpoint.ipynb
 .ipynb_checkpoints/STREAMLINE-Notebook-checkpoint.ipynb
+__pycache__/ApplyModelJob.cpython-38.pyc
+__pycache__/DataCompareJob.cpython-38.pyc
+__pycache__/DataPreprocessingJob.cpython-38.pyc
+__pycache__/ExploratoryAnalysisJob.cpython-38.pyc
+__pycache__/ExploratoryAnalysisMain.cpython-38.pyc
+__pycache__/FeatureImportanceJob.cpython-38.pyc
+__pycache__/FeatureSelectionJob.cpython-38.pyc
+__pycache__/ModelJob.cpython-38.pyc
+__pycache__/PDF_ReportJob.cpython-38.pyc
+__pycache__/StatsJob.cpython-38.pyc
