Serial command line use fixes
-fixed basic main run commands in stats and data compare files.
-updated composite FI plot to work with only one ML algorithm, and added run parameter to chose one of two primary metrics for algorithm weighting.
-Updated jupyter notebook accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__/FeatureSelectionJob.cpython-38.pyc
 __pycache__/ModelJob.cpython-38.pyc
 __pycache__/PDF_ReportJob.cpython-38.pyc
 __pycache__/StatsJob.cpython-38.pyc
+*.pyc
