--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ UsefulNotebooks/fprtpr.csv
 streamline/__pycache__/StatsJob.cpython-38.pyc
 *.ipynb
 
+streamline/__pycache__/ApplyModelJob.cpython-38.pyc
+streamline/__pycache__/ApplyModelJob.cpython-38.pyc
+streamline/__pycache__/DataCompareJob.cpython-38.pyc
+streamline/__pycache__/StatsJob.cpython-38.pyc
+streamline/__pycache__/PDF_ReportJob.cpython-38.pyc
