--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,5 @@
-
-.ipynb_checkpoints/STREAMLINE-GoogleColabNotebook-checkpoint.ipynb
-.ipynb_checkpoints/STREAMLINE-Notebook-checkpoint.ipynb
-__pycache__/ApplyModelJob.cpython-38.pyc
-__pycache__/DataCompareJob.cpython-38.pyc
-__pycache__/DataPreprocessingJob.cpython-38.pyc
-__pycache__/ExploratoryAnalysisJob.cpython-38.pyc
-__pycache__/ExploratoryAnalysisMain.cpython-38.pyc
-__pycache__/FeatureImportanceJob.cpython-38.pyc
-__pycache__/FeatureSelectionJob.cpython-38.pyc
-__pycache__/ModelJob.cpython-38.pyc
-__pycache__/PDF_ReportJob.cpython-38.pyc
-__pycache__/StatsJob.cpython-38.pyc
+.DS_Store
+.idea
+.ipynb_checkpoints/
 *.pyc
-streamline_old/__pycache__/ApplyModelJob.cpython-38.pyc
-streamline_old/__pycache__/ApplyModelJob.cpython-38.pyc
-streamline_old/__pycache__/ApplyModelJob.cpython-38.pyc
-streamline_old/__pycache__/FeatureSelectionJob.cpython-38.pyc
-streamline_old/__pycache__/FeatureSelectionJob.cpython-38.pyc
-UsefulNotebooks/fprtpr.csv
-streamline_old/__pycache__/StatsJob.cpython-38.pyc
 *.ipynb
-
-streamline_old/__pycache__/ApplyModelJob.cpython-38.pyc
-streamline_old/__pycache__/ApplyModelJob.cpython-38.pyc
-streamline_old/__pycache__/DataCompareJob.cpython-38.pyc
-streamline_old/__pycache__/StatsJob.cpython-38.pyc
-streamline_old/__pycache__/PDF_ReportJob.cpython-38.pyc
