Removed pycodestyle test
Former-commit-id: 9a9ba9472ae4be92cf07115a0cca6a3ef1101b0a

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Pytest and Pycodestyle Test
+name: Pytest
 
 on: [ push, pull_request ]
 
@@ -24,4 +24,4 @@ jobs:
 #         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest -v --ignore=streamline_old --pycodestyle
+        pytest -v --ignore=streamline_old
