Code additions to Feature selection and feature sel'n runner
Former-commit-id: d3ce097cbff05652d82e494b78ede0c73564eb47

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [pycodestyle]
 count = True
-ignore = E126, E127, W503, W504
+ignore = E126, E127, W503, W504, E226
 max-line-length = 120
 statistics = True
