--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,12 @@ count = True
 ignore = E126, E127, W503, W504
 max-line-length = 120
 statistics = True
+
+[metadata]
+name = streamline
+version = attr:
+src.VERSION
+
+[options]
+packages = find:
+install_requires = click
