added all learning based methods
Former-commit-id: bcf757769c5578ede6222e5a29390705cca476fa

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib
 numpy
-optuna==2.0.0
+optuna
 sqlalchemy<2.0
 plotly>=4.0.0
 pandas
@@ -9,7 +9,7 @@ pycodestyle
 scikit-learn
 scipy
 seaborn
-skrebate==0.7
+skrebate
 Sphinx
 sphinx-rtd-theme
 tqdm
@@ -21,3 +21,6 @@ catboost
 gplearn
 ipython
 fpdf
+scikit-XCS
+scikit-ExSTraCS
+scikit-eLCS
