major edits and corrections

--- a/run.cfg
+++ b/run.cfg
@@ -1,6 +1,6 @@
 [global]
 dataset_path = 'DemoData'
-output_path = 'OUTPUT'
+output_path = 'demo'
 experiment_name = 'demo'
 class_label = 'Class'
 instance_label = None
@@ -10,7 +10,9 @@ run_parallel = True
 
 [hpc]
 cluster_name = 'slurm'
-reserved_memory = '15G'
+reserved_memory = '4G'
+run_cluster = False
+queue = 'defq'
 
 
 [logging]
@@ -57,7 +59,7 @@ overwrite_cv_feat = True
 
 [modeling]
 do_model = True
-do_all = True
+do_all = False
 algorithms = ['LR', 'DT', 'NB']
 exclude = ['eLCS', 'XCS']
 primary_metric = 'balanced_accuracy'
