Correction to cluster params

--- a/run.cfg
+++ b/run.cfg
@@ -11,7 +11,7 @@ run_parallel = True
 [hpc]
 cluster_name = 'slurm'
 reserved_memory = '4G'
-run_cluster = False
+run_cluster = True
 queue = 'defq'
 
 
