spell correction in model runner

--- a/run.cfg
+++ b/run.cfg
@@ -10,7 +10,7 @@ run_parallel = True
 
 [hpc]
 cluster_name = 'slurm'
-reserved_memory = '4G'
+reserved_memory = '4'
 run_cluster = True
 queue = 'defq'
 
