--- a/run.cfg
+++ b/run.cfg
@@ -1,16 +1,16 @@
 [global]
-dataset_path = 'DemoData'
-output_path = 'demo'
-experiment_name = 'demo'
-class_label = 'Class'
-instance_label = None
+dataset_path = 'OSA'
+output_path = 'OSA_OUTPUT'
+experiment_name = 'OSA'
+class_label = 'class'
+instance_label = 'subnum'
 
 [multiprocessing]
-run_parallel = True
+run_parallel = False
 
 [hpc]
 cluster_name = 'slurm'
-reserved_memory = '4'
+reserved_memory = '10'
 run_cluster = True
 queue = 'defq'
 
@@ -56,11 +56,10 @@ top_features = 40
 export_scores = True
 overwrite_cv_feat = True
 
-
 [modeling]
 do_model = True
-do_all = False
-algorithms = ['LR', 'DT', 'NB']
+do_all = True
+algorithms = ['LR', 'NB', 'DT']
 exclude = ['eLCS', 'XCS']
 primary_metric = 'balanced_accuracy'
 metric_direction = 'maximize'
