Dask Implementation with errors

--- a/run.cfg
+++ b/run.cfg
@@ -1,17 +1,15 @@
 [global]
-dataset_path = 'OSA'
-output_path = 'OSA_OUTPUT'
-experiment_name = 'OSA'
-class_label = 'class'
-instance_label = 'subnum'
+dataset_path = 'DemoData'
+output_path = 'demo'
+experiment_name = 'demo'
+class_label = 'Class'
+instance_label = None
 
 [multiprocessing]
-run_parallel = False
-
-[hpc]
+run_parallel = "SLURM"
 cluster_name = 'slurm'
-reserved_memory = '10'
-run_cluster = True
+reserved_memory = '4'
+run_cluster = "Dask"
 queue = 'defq'
 
 
@@ -58,7 +56,7 @@ overwrite_cv_feat = True
 
 [modeling]
 do_model = True
-do_all = True
+do_all = False
 algorithms = ['LR', 'NB', 'DT']
 exclude = ['eLCS', 'XCS']
 primary_metric = 'balanced_accuracy'
