Removed Exception Error

--- a/run.cfg
+++ b/run.cfg
@@ -6,10 +6,10 @@ class_label = 'Class'
 instance_label = None
 
 [multiprocessing]
-run_parallel = "SLURM"
+run_parallel = False
 cluster_name = 'slurm'
 reserved_memory = '4'
-run_cluster = "Dask"
+run_cluster = "SLURMOld"
 queue = 'defq'
 
 
