Finalized runner and dask integration

--- a/run.cfg
+++ b/run.cfg
@@ -6,19 +6,29 @@ class_label = 'Class'
 instance_label = None
 
 [multiprocessing]
-run_parallel = False
+run_parallel = "SLURM"
 cluster_name = 'slurm'
-reserved_memory = '4'
-run_cluster = "SLURMOld"
+reserved_memory = '10'
+run_cluster = "False"
 queue = 'defq'
 
+[runners]
+do_till_report = True
+do_eda = False
+do_dataprep = False
+do_feat_sel = False
+do_model = False
+do_compare_dataset = False
+do_report = False
+do_cleanup = False
+do_replicate = False
 
 [logging]
 logging_level = 'INFO'
 verbose = False
+do_feat_imp = True
 
 [eda]
-do_eda = True
 ignore_features_path = ''
 categorical_feature_path = ''
 match_label = ''
@@ -31,14 +41,12 @@ export_univariate_plots = True
 random_state = 42
 
 [dataprep]
-do_dataprep = True
 scale_data = True
 impute_data = True
 multi_impute = True
 overwrite_cv = True
 
 [feat_imp]
-do_feat_imp = True
 do_mutual_info = True
 do_multisurf = True
 use_turf = False
@@ -47,7 +55,6 @@ n_jobs = 1
 instance_subset = 2000
 
 [feat_sel]
-do_feat_sel = True
 max_features_to_keep = 2000
 filter_poor_features = True
 top_features = 40
@@ -55,7 +62,6 @@ export_scores = True
 overwrite_cv_feat = True
 
 [modeling]
-do_model = True
 do_all = False
 algorithms = ['LR', 'NB', 'DT']
 exclude = ['eLCS', 'XCS']
@@ -79,15 +85,11 @@ plot_fi_box = True
 metric_weight = 'balanced_accuracy'
 top_model_features = 40
 
-[other]
-do_compare_dataset = True
-do_report = True
-do_cleanup = False
+[cleanup]
 del_time = True
 del_old_cv = True
 
 [replication]
-do_replicate = False
 rep_data_path = ""
 dataset_for_rep = ""
 rep_export_feature_correlations = True
