--- a/run.cfg
+++ b/run.cfg
@@ -8,8 +8,8 @@ instance_label = None
 [multiprocessing]
 run_parallel = "SLURM"
 cluster_name = 'slurm'
-reserved_memory = '10'
-run_cluster = "False"
+reserved_memory = 4
+run_cluster = "SLURMOld"
 queue = 'defq'
 
 [runners]
