Debugged last commits, now runs error free on SLURM

--- a/run.cfg
+++ b/run.cfg
@@ -7,9 +7,8 @@ instance_label = None
 
 [multiprocessing]
 run_parallel = "SLURM"
-cluster_name = 'slurm'
 reserved_memory = 4
-run_cluster = "SLURMOld"
+run_cluster = "SLURM"
 queue = 'defq'
 
 [runners]
