Faulty config TODO: repair

--- a/run.cfg
+++ b/run.cfg
@@ -6,9 +6,9 @@ class_label = 'Class'
 instance_label = None
 
 [multiprocessing]
-run_parallel = "SLURM"
+run_parallel = False
 reserved_memory = 4
-run_cluster = "SLURM"
+run_cluster = "SLURMOld"
 queue = 'defq'
 
 [runners]
