Added complete legacy support

--- a/run.cfg
+++ b/run.cfg
@@ -20,7 +20,8 @@ do_model = False
 do_compare_dataset = False
 do_report = False
 do_cleanup = False
-do_replicate = False
+do_replicate = True
+do_rep_report = True
 
 [logging]
 logging_level = 'INFO'
@@ -89,12 +90,11 @@ del_time = True
 del_old_cv = True
 
 [replication]
-rep_data_path = ""
-dataset_for_rep = ""
+rep_data_path = './DemoRepData'
+dataset_for_rep = './DemoData/demodata.csv'
 rep_export_feature_correlations = True
 rep_plot_roc = True
 rep_plot_prc = True
 rep_plot_metric_boxplots = True
-do_rep_report = False
 
 
