Debugged and confirmed last commit running

--- a/run.cfg
+++ b/run.cfg
@@ -19,9 +19,9 @@ do_feat_sel = False
 do_model = False
 do_compare_dataset = False
 do_report = False
+do_replicate = False
+do_rep_report = False
 do_cleanup = False
-do_replicate = True
-do_rep_report = True
 
 [logging]
 logging_level = 'INFO'
