--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [pycodestyle]
 count = True
-ignore = E126, E127, W503, W504
+ignore = E126, E127, E402, W503, W504
 max-line-length = 120
 statistics = True
 
