--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
+          pip install -r requirements.txt
           pip install sphinx sphinx_rtd_theme myst-parser
       - name: Sphinx build
         run: |
