Added documentation and corrected runner:

--- a/run.cfg
+++ b/run.cfg
@@ -3,12 +3,12 @@ dataset_path = 'DemoData'
 output_path = 'demo'
 experiment_name = 'demo'
 class_label = 'Class'
-instance_label = None
+instance_label = 'InstanceID'
 
 [multiprocessing]
-run_parallel = False
+run_parallel = True
 reserved_memory = 4
-run_cluster = "SLURMOld"
+run_cluster = "False"
 queue = 'defq'
 
 [runners]
@@ -64,6 +64,7 @@ overwrite_cv_feat = True
 [modeling]
 do_all = False
 algorithms = ['LR', 'NB', 'DT']
+model_resubmit = False
 exclude = ['eLCS', 'XCS']
 primary_metric = 'balanced_accuracy'
 metric_direction = 'maximize'
