Corrected Legacy Job Submit bool->eval for LSF

--- a/upenn.cfg
+++ b/upenn.cfg
@@ -8,7 +8,7 @@ instance_label = 'InstanceID'
 [multiprocessing]
 run_parallel = False
 reserved_memory = 4
-run_cluster = "LSF"
+run_cluster = "LSFOld"
 queue = 'i2c2_normal'
 
 [runners]
