Finished LSF Corrections

--- a/upenn.cfg
+++ b/upenn.cfg
@@ -6,9 +6,9 @@ class_label = 'Class'
 instance_label = 'InstanceID'
 
 [multiprocessing]
-run_parallel = False
+run_parallel = True
 reserved_memory = 4
-run_cluster = "LSFOld"
+run_cluster = "LSF"
 queue = 'i2c2_normal'
 
 [runners]
