CLI Runner Updates

--- a/upenn.cfg
+++ b/upenn.cfg
@@ -15,8 +15,10 @@ queue = 'i2c2_normal'
 do_till_report = True
 do_eda = False
 do_dataprep = False
+do_feat_imp = False
 do_feat_sel = False
 do_model = False
+do_stats = False
 do_compare_dataset = False
 do_report = False
 do_replicate = False
@@ -26,7 +28,6 @@ do_cleanup = False
 [logging]
 logging_level = 'INFO'
 verbose = False
-do_feat_imp = True
 
 [eda]
 ignore_features_path = ''
@@ -78,7 +79,6 @@ lcs_nu = 1
 lcs_n = 2000
 lcs_iterations = 200000
 lcs_timeout = 20000
-do_stats = True
 plot_roc = True
 plot_prc = True
 plot_metric_boxplots = True
