--- a/local.cfg
+++ b/local.cfg
@@ -15,8 +15,10 @@ queue = 'defq'
 do_till_report = True
 do_eda = False
 do_dataprep = False
+do_feat_imp = False
 do_feat_sel = False
 do_model = False
+do_stats = False
 do_compare_dataset = False
 do_report = False
 do_replicate = False
@@ -78,7 +80,6 @@ lcs_nu = 1
 lcs_n = 2000
 lcs_iterations = 200000
 lcs_timeout = 20000
-do_stats = True
 plot_roc = True
 plot_prc = True
 plot_metric_boxplots = True
