Renamed demodata.csv to hcc-demodata_example.csv, added colab for reference

--- a/local.cfg
+++ b/local.cfg
@@ -93,7 +93,7 @@ del_old_cv = True
 
 [replication]
 rep_data_path = './DemoRepData'
-dataset_for_rep = './DemoData/demodata.csv'
+dataset_for_rep = './DemoData/hcc-data_example.csv'
 rep_export_feature_correlations = True
 rep_plot_roc = True
 rep_plot_prc = True
