added most data process features except one hot encoding

--- a/local.cfg
+++ b/local.cfg
@@ -38,7 +38,9 @@ cv_partitions = 10
 partition_method = 'Stratified'
 categorical_cutoff = 10
 sig_cutoff = 0.05
-missingness_percentage = 0.3
+featureeng_missingness = 0.5
+cleaning_missingness = 0.5
+correlation_removal_threshold = 0.8
 export_feature_correlations = True
 export_univariate_plots = True
 random_state = 42
