--- a/upenn.cfg
+++ b/upenn.cfg
@@ -30,8 +30,8 @@ logging_level = 'INFO'
 verbose = False
 
 [eda]
-ignore_features_path = ''
-categorical_feature_path = ''
+ignore_features_path = ['Alcohol']
+categorical_feature_path = ['Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis','Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus','Nonalcoholic Steatohepatitis','Esophageal Varices','Splenomegaly','Portal Hypertension','Portal Vein Thrombosis','Liver Metastasis','Radiological Hallmark','catTest4','catTest10']
 match_label = ''
 cv_partitions = 10
 partition_method = 'Stratified'
