Edited config files for data loc change

--- a/local.cfg
+++ b/local.cfg
@@ -1,5 +1,5 @@
 [global]
-dataset_path = 'DemoData'
+dataset_path = './data/DemoData'
 output_path = 'demo'
 experiment_name = 'demo'
 class_label = 'Class'
@@ -95,8 +95,8 @@ del_time = True
 del_old_cv = True
 
 [replication]
-rep_data_path = './DemoRepData'
-dataset_for_rep = './DemoData/hcc-data_example.csv'
+rep_data_path = './data/DemoRepData'
+dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
 rep_export_feature_correlations = True
 rep_plot_roc = True
 rep_plot_prc = True
