Added quantitative features parameter as well

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -31,8 +31,9 @@ verbose = False
 do_feat_imp = True
 
 [eda]
-ignore_features_path = ['Alcohol']
-categorical_feature_path = ['Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis','Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus','Nonalcoholic Steatohepatitis','Esophageal Varices','Splenomegaly','Portal Hypertension','Portal Vein Thrombosis','Liver Metastasis','Radiological Hallmark','catTest4','catTest10']
+ignore_features_path = None
+categorical_feature_path = ['Alcohol', 'Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis','Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus','Nonalcoholic Steatohepatitis','Esophageal Varices','Splenomegaly','Portal Hypertension','Portal Vein Thrombosis','Liver Metastasis','Radiological Hallmark','catTest4','catTest10']
+quantitative_feature_path = None
 match_label = ''
 cv_partitions = 10
 partition_method = 'Stratified'
