Edited and confirmed Usefull Notebooks

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -32,8 +32,16 @@ do_feat_imp = True
 
 [eda]
 ignore_features_path = None
-categorical_feature_path = ['Alcohol', 'Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis','Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus','Nonalcoholic Steatohepatitis','Esophageal Varices','Splenomegaly','Portal Hypertension','Portal Vein Thrombosis','Liver Metastasis','Radiological Hallmark','catTest4','catTest10']
-quantitative_feature_path = None
+categorical_feature_path = ['Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis',
+                                'Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus',
+                                'Nonalcoholic Steatohepatitis','Esophageal Varices','Splenomegaly','Portal Hypertension','Portal Vein Thrombosis','Liver Metastasis','Radiological Hallmark',
+                                'Sim_Cat_2','Sim_Cat_3','Sim_Cat_4','Sim_Text_Cat_2','Sim_Text_Cat_3','Sim_Text_Cat_4']
+quantitative_feature_path = ['Age at diagnosis','Grams of Alcohol per day','Packs of cigarets per year', 'Performance Status*', 'Encephalopathy degree*','Ascites degree*',
+                                'International Normalised Ratio*','Alpha-Fetoprotein (ng/mL)','Haemoglobin (g/dL)','Mean Corpuscular Volume', 'Leukocytes(G/L)',
+                                'Platelets','Albumin (mg/dL)','Total Bilirubin(mg/dL)','Alanine transaminase (U/L)','Aspartate transaminase (U/L)','Gamma glutamyl transferase (U/L)',
+                                'Alkaline phosphatase (U/L)', 'Total Proteins (g/dL)', 'Creatinine (mg/dL)','Number of Nodules','Major dimension of nodule (cm)','Direct Bilirubin (mg/dL)',
+                                'Iron', 'Oxygen Saturation (%%)','Ferritin (ng/mL)','Sim_Miss_0.6','Sim_Miss_0.7','Sim_Cor_-1.0_A','Sim_Cor_-1.0_B','Sim_Cor_0.9_A', 'Sim_Cor_0.9_B',
+                                'Sim_Cor_1.0_A','Sim_Cor_1.0_B']
 match_label = ''
 cv_partitions = 10
 partition_method = 'Stratified'
