Renamed all class_labels to outcome_label

--- a/run_configs/cedars_old.cfg
+++ b/run_configs/cedars_old.cfg
@@ -2,7 +2,7 @@
 dataset_path = './data/DemoData'
 output_path = 'demo'
 experiment_name = 'demo_uge'
-class_label = 'Class'
+outcome_label = 'Class'
 instance_label = 'InstanceID'
 
 [multiprocessing]
