--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,17 +8,19 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install sphinx sphinx_rtd_theme myst-parser
-      - name: Sphinx build
-        run: |
-          sphinx-build -b html docs/source docs/build/html -E -a
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
+      - name: Install dependencies
+        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main') }}
+        run: |
+          pip install -r requirements.txt
+          pip install sphinx sphinx_rtd_theme myst-parser
+      - name: Sphinx build
+        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main') }}
+        run: |
+          sphinx-build -b html docs/source docs/build/html -E -a
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main') }}
