--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__
 demo/
 demo_old/
 catboost_info/
-./tests/
+./tests/*
 testlogs/
 dask_logs/
 OUTPUT/
@@ -25,3 +25,4 @@ UserOutput/
 DemoOutput/
 multiplexer_dataset/
 gametes_dataset/
+/tests/
