Update documentation and local config file

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -1,36 +1,10 @@
-[global]
+[essential run parameters (preset for included demonstration datasets)]
 dataset_path = './data/DemoData'
-output_path = 'demo'
-experiment_name = 'demo'
+output_path = 'DemoOutputLocal'
+experiment_name = 'demo_experiment'
 class_label = 'Class'
 instance_label = 'InstanceID'
-
-[multiprocessing]
-run_parallel = True
-reserved_memory = 4
-run_cluster = "False"
-queue = 'defq'
-
-[runners]
-do_till_report = True
-do_eda = False
-do_dataprep = False
-do_feat_imp = False
-do_feat_sel = False
-do_model = False
-do_stats = False
-do_compare_dataset = False
-do_report = False
-do_replicate = False
-do_rep_report = False
-do_cleanup = False
-
-[logging]
-logging_level = 'INFO'
-verbose = False
-do_feat_imp = True
-
-[eda]
+match_label = None
 ignore_features_path = None
 categorical_feature_path = ['Gender','Symptoms','Alcohol','Hepatitis B Surface Antigen','Hepatitis B e Antigen','Hepatitis B Core Antibody','Hepatitis C Virus Antibody','Cirrhosis',
                                 'Endemic Countries','Smoking','Diabetes','Obesity','Hemochromatosis','Arterial Hypertension','Chronic Renal Insufficiency','Human Immunodeficiency Virus',
@@ -42,73 +16,110 @@ quantitative_feature_path = ['Age at diagnosis','Grams of Alcohol per day','Pack
                                 'Alkaline phosphatase (U/L)', 'Total Proteins (g/dL)', 'Creatinine (mg/dL)','Number of Nodules','Major dimension of nodule (cm)','Direct Bilirubin (mg/dL)',
                                 'Iron', 'Oxygen Saturation (%%)','Ferritin (ng/mL)','Sim_Miss_0.6','Sim_Miss_0.7','Sim_Cor_-1.0_A','Sim_Cor_-1.0_B','Sim_Cor_0.9_A', 'Sim_Cor_0.9_B',
                                 'Sim_Cor_1.0_A','Sim_Cor_1.0_B']
-match_label = ''
-cv_partitions = 10
+rep_data_path = './data/DemoRepData'
+dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
+
+[phases to run]
+do_till_report = True # If True, automatically runs all phases below up until and including do_report, automatically running 'compare_dataset' only if multiple target datasets included
+do_eda = False
+do_dataprep = False
+do_feat_imp = False
+do_feat_sel = False
+do_model = False
+do_stats = False
+do_compare_dataset = False
+do_report = False
+do_replicate = True # Only set to True if replication data is available
+do_rep_report = True # Only set to True if replication data is available
+do_cleanup = True
+
+[general]
+cv_partitions = 3
 partition_method = 'Stratified'
 categorical_cutoff = 10
 sig_cutoff = 0.05
+random_state = 42
+
+[data processing]
 featureeng_missingness = 0.5
 cleaning_missingness = 0.5
 correlation_removal_threshold = 0.8
+top_features = 40 #change to top_uni_features
 export_feature_correlations = True
 export_univariate_plots = True
-random_state = 42
 
-[dataprep]
+[scaling and imputing]
 scale_data = True
 impute_data = True
 multi_impute = True
 overwrite_cv = True
 
-[feat_imp]
+[feature importance estimation]
 do_mutual_info = True
 do_multisurf = True
 use_turf = False
 turf_pct = 0.5
 n_jobs = 1
-instance_subset = 2000
+instance_subset = 2000 #Ryan - add top_plot_features
 
-[feat_sel]
-max_features_to_keep = 2000
+[feature selection]
 filter_poor_features = True
-top_features = 40
+max_features_to_keep = 2000
 export_scores = True
-overwrite_cv_feat = True
+overwrite_cv_feat = True #Ryan- remove this feature
 
 [modeling]
-do_all = False
+do_all = False #delete ??
 algorithms = ['LR', 'NB', 'DT']
-model_resubmit = False
 exclude = ['eLCS', 'XCS']
-primary_metric = 'balanced_accuracy'
-metric_direction = 'maximize'
 training_subsample = 0
 use_uniform_fi = True
+primary_metric = 'balanced_accuracy'
+metric_direction = 'maximize'
 n_trials = 200
 timeout = 900
 export_hyper_sweep_plots = False
 do_lcs_sweep = False
 lcs_nu = 1
-lcs_n = 2000
 lcs_iterations = 200000
-lcs_timeout = 20000
+lcs_n = 2000
+lcs_timeout = 1200
+model_resubmit = False
+
+[post-analysis]
 plot_roc = True
 plot_prc = True
-plot_metric_boxplots = True
 plot_fi_box = True
+plot_metric_boxplots = True
 metric_weight = 'balanced_accuracy'
 top_model_features = 40
+
+[replication]
+rep_export_feature_correlations = True
+rep_plot_roc = True
+rep_plot_prc = True
+rep_plot_metric_boxplots = True
 
 [cleanup]
 del_time = True
 del_old_cv = True
 
-[replication]
-rep_data_path = './data/DemoRepData'
-dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
-rep_export_feature_correlations = True
-rep_plot_roc = True
-rep_plot_prc = True
-rep_plot_metric_boxplots = True
+[multiprocessing]
+run_parallel = True
+reserved_memory = 4
+run_cluster = "False"
+queue = 'defq'
+
+[logging]
+logging_level = 'INFO'
+verbose = False
+do_feat_imp = True
+
+
+
+
+
+
+
 
 
