Documentation and local config update

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -105,10 +105,10 @@ del_time = True
 del_old_cv = True
 
 [multiprocessing]
+run_cluster = False
 run_parallel = True
-reserved_memory = 4
-run_cluster = "False"
 queue = 'defq'
+reserved_memory = 4
 
 [logging]
 logging_level = 'INFO'
