--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -20,7 +20,10 @@ rep_data_path = './data/DemoRepData'
 dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
 
 [phases to run]
-do_till_report = True # If True, automatically runs all phases below up until and including do_report, automatically running 'compare_dataset' only if multiple target datasets included
+# If True, automatically runs all phases below up until and including do_report, automatically running 'compare_dataset' only if multiple target datasets included
+do_till_report = True
+
+# Individual stages
 do_eda = False
 do_dataprep = False
 do_feat_imp = False
@@ -29,8 +32,10 @@ do_model = False
 do_stats = False
 do_compare_dataset = False
 do_report = False
-do_replicate = True # Only set to True if replication data is available
-do_rep_report = True # Only set to True if replication data is available
+# Only set to True if replication data is available
+do_replicate = True
+# Only set to True if replication data is available
+do_rep_report = True
 do_cleanup = True
 
 [general]
@@ -44,9 +49,10 @@ random_state = 42
 featureeng_missingness = 0.5
 cleaning_missingness = 0.5
 correlation_removal_threshold = 0.8
-top_features = 40 #change to top_uni_features
+top_uni_features = 40
 export_feature_correlations = True
 export_univariate_plots = True
+exclude_eda_output = None
 
 [scaling and imputing]
 scale_data = True
@@ -60,16 +66,18 @@ do_multisurf = True
 use_turf = False
 turf_pct = 0.5
 n_jobs = 1
-instance_subset = 2000 #Ryan - add top_plot_features
+instance_subset = 2000
+top_fi_features = 40
 
 [feature selection]
 filter_poor_features = True
 max_features_to_keep = 2000
 export_scores = True
-overwrite_cv_feat = True #Ryan- remove this feature
+#Ryan- remove this feature
+overwrite_cv_feat = True
 
 [modeling]
-do_all = False #delete ??
+do_all = False
 algorithms = ['LR', 'NB', 'DT']
 exclude = ['eLCS', 'XCS']
 training_subsample = 0
@@ -87,18 +95,13 @@ lcs_timeout = 1200
 model_resubmit = False
 
 [post-analysis]
-plot_roc = True
-plot_prc = True
-plot_fi_box = True
-plot_metric_boxplots = True
 metric_weight = 'balanced_accuracy'
-top_model_features = 40
+top_model_fi_features = 40
+exclude_plots = None
 
 [replication]
 rep_export_feature_correlations = True
-rep_plot_roc = True
-rep_plot_prc = True
-rep_plot_metric_boxplots = True
+exclude_rep_plots = None
 
 [cleanup]
 del_time = True
@@ -113,7 +116,6 @@ reserved_memory = 4
 [logging]
 logging_level = 'INFO'
 verbose = False
-do_feat_imp = True
 
 
 
