--- a/run_configs/cedars.cfg
+++ b/run_configs/cedars.cfg
@@ -49,8 +49,7 @@ sig_cutoff = 0.05
 featureeng_missingness = 0.5
 cleaning_missingness = 0.5
 correlation_removal_threshold = 0.8
-export_feature_correlations = True
-export_univariate_plots = True
+exclude_eda_output = None
 random_state = 42
 
 [dataprep]
