Colab Notebook and documentation update

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -23,7 +23,7 @@ dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
 # If True, automatically runs all phases below up until and including do_report, automatically running 'compare_dataset' only if multiple target datasets included
 do_till_report = True
 
-# Individual stages
+# Individual phases (do_report and do_rep_report are both part of phase 9)
 do_eda = False
 do_dataprep = False
 do_feat_imp = False
@@ -32,9 +32,7 @@ do_model = False
 do_stats = False
 do_compare_dataset = False
 do_report = False
-# Only set to True if replication data is available
 do_replicate = True
-# Only set to True if replication data is available
 do_rep_report = True
 do_cleanup = True
 
@@ -73,8 +71,6 @@ top_fi_features = 40
 filter_poor_features = True
 max_features_to_keep = 2000
 export_scores = True
-#Ryan- remove this feature
-overwrite_cv_feat = True
 
 [modeling]
 do_all = False
@@ -107,10 +103,11 @@ del_time = True
 del_old_cv = True
 
 [multiprocessing]
-run_cluster = False
 run_parallel = True
-queue = 'defq'
+run_cluster = False
 reserved_memory = 4
+queue = 'defq'
+
 
 [logging]
 logging_level = 'INFO'
