configuration file update

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -1,4 +1,4 @@
-[essential run parameters (preset for included demonstration datasets)]
+[essential run parameters - preset for included demonstration datasets - phases 1-9]
 dataset_path = './data/DemoData'
 output_path = 'DemoOutputLocal'
 experiment_name = 'demo_experiment'
@@ -19,7 +19,7 @@ quantitative_feature_path = ['Age at diagnosis','Grams of Alcohol per day','Pack
 rep_data_path = './data/DemoRepData'
 dataset_for_rep = './data/DemoData/hcc-data_example_custom.csv'
 
-[phases to run]
+[essential run parameters - phases to run - phases 1-9]
 # If True, automatically runs all phases below up until and including do_report, automatically running 'compare_dataset' only if multiple target datasets included
 do_till_report = True
 
@@ -36,44 +36,41 @@ do_replicate = True
 do_rep_report = True
 do_cleanup = True
 
-[general]
+[general - phase 1]
 cv_partitions = 3
 partition_method = 'Stratified'
 categorical_cutoff = 10
 sig_cutoff = 0.05
 random_state = 42
 
-[data processing]
+[data processing - phase 1]
+exclude_eda_output = None
+top_uni_features = 40
 featureeng_missingness = 0.5
 cleaning_missingness = 0.5
 correlation_removal_threshold = 0.8
-top_uni_features = 40
-export_feature_correlations = True
-export_univariate_plots = True
-exclude_eda_output = None
 
-[scaling and imputing]
-scale_data = True
+[imputing and scaling - phase 2]
 impute_data = True
+scale_data = True
 multi_impute = True
 overwrite_cv = True
 
-[feature importance estimation]
+[feature importance estimation - phase 3]
 do_mutual_info = True
 do_multisurf = True
 use_turf = False
 turf_pct = 0.5
-n_jobs = 1
 instance_subset = 2000
-top_fi_features = 40
+n_jobs = 1
 
-[feature selection]
+[feature selection - phase 4]
 filter_poor_features = True
 max_features_to_keep = 2000
 export_scores = True
+top_fi_features = 40
 
-[modeling]
-do_all = False
+[modeling - phase 5]
 algorithms = ['LR', 'NB', 'DT']
 exclude = ['eLCS', 'XCS']
 training_subsample = 0
@@ -90,12 +87,12 @@ lcs_n = 2000
 lcs_timeout = 1200
 model_resubmit = False
 
-[post-analysis]
+[post-analysis - phase 6]
+exclude_plots = None
 metric_weight = 'balanced_accuracy'
 top_model_fi_features = 40
-exclude_plots = None
 
-[replication]
+[replication - phase 8]
 exclude_rep_plots = None
 
 [cleanup]
@@ -107,7 +104,6 @@ run_parallel = True
 run_cluster = False
 reserved_memory = 4
 queue = 'defq'
-
 
 [logging]
 logging_level = 'INFO'
