Added overwrite_cv_feat in nbs

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -69,6 +69,7 @@ filter_poor_features = True
 max_features_to_keep = 2000
 export_scores = True
 top_fi_features = 40
+overwrite_cv_feat = True
 
 [modeling - phase 5]
 algorithms = ['LR', 'NB', 'DT']
