Config file update and processed replication save added

--- a/run_configs/local.cfg
+++ b/run_configs/local.cfg
@@ -1,6 +1,6 @@
 [essential run parameters - preset for included demonstration datasets - phases 1-9]
 dataset_path = './data/DemoData'
-output_path = 'DemoOutputLocal'
+output_path = 'DemoOutput'
 experiment_name = 'demo_experiment'
 class_label = 'Class'
 instance_label = 'InstanceID'
