--- a/run_configs/cedars_old.cfg
+++ b/run_configs/cedars_old.cfg
@@ -54,7 +54,7 @@ correlation_removal_threshold = 0.8
 impute_data = True
 scale_data = True
 multi_impute = True
-overwrite_cv = True
+overwrite_cv = False
 
 [feature importance estimation - phase 3]
 do_mutual_info = True
@@ -97,8 +97,8 @@ top_model_fi_features = 40
 exclude_rep_plots = None
 
 [cleanup]
-del_time = True
-del_old_cv = True
+del_time = False
+del_old_cv = False
 
 [multiprocessing]
 run_parallel = True
