--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ plotly>=4.0.0
 pandas>=1.5.2
 pip
 pycodestyle
-scikit-learn
+scikit-learn>=1.0.2,<1.3.0
 scipy>=1.8.0
 seaborn>=0.11.0
 skrebate==0.7
